-
Bug
-
Resolution: Done
-
P1: Critical
-
5.2.0 Alpha
-
None
-
Windows 7, Mac
-
qtdeclarative/stable: 22b83ec28a7dfebe9d47ff5c98fddfdb492e4304
onPositionChanged() does not fire when hoverEnabled is true. This used to work in 5.1.1
import QtQuick 2.1 import QtQuick.Window 2.1 Rectangle { id: root color: "red" height: 70 width: 1000 MouseArea { anchors.fill: parent acceptedButtons: Qt.LeftButton | Qt.RightButton hoverEnabled: true onPositionChanged: { if (pressed) console.log("gets here in 5.2 alpha and 5.1") else console.log("on hover never gets here in 5.2 alpha but does in 5.1") } Text { id: t font.pointSize: 20 anchors.fill: parent text: "THIS IS A TEST" } } }
- is required for
-
QTBUG-33863 Issues to be fixed before Qt5.2 RC1 release
-
- Closed
-
| For Gerrit Dashboard: QTBUG-33842 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 69577,4 | Fix QQuickText hover event handling | stable | qt/qtdeclarative | Status: MERGED | +2 | 0 |